# gray-scott-sim

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build_yaml.yml  docker_yaml.yml
tests/: gs_test_1.cpp
